#39 Add named Gear types and Facts